# DistributedStateSpaceBuilder

./: .README.md.kate-swp  .gitignore  CMakeLists.txt  DistributedStateSpace.kdev4  DistributedStateSpaceBuilder.kdev4  README.md
.kdev4/: DistributedStateSpace.kdev4  DistributedStateSpaceBuilder.kdev4
samples/: simple2.pn
src/: .StateGraph.h.kate-swp  Arc.h  ArcSG.h  Automata.cpp  Automata.h  BitsVector.cpp  BitsVector.h  CMakeLists.txt  ConstructPetriFromFile.cpp  DistributedState.cpp  DistributedState.h  DistributedStateSpace.cpp  Element.cpp  Element.h  ElementPhase1.cpp  ElementPhase1.h  ElementRed.cpp  ElementRed.h  Element_dss.h  Fils.cpp  Fils.h  Fusion.h  Graphe.cpp  Graphe.h  GrapheSync.cpp  GrapheSync.h  IntNode.cpp  InternalArc.cpp  InternalArc.h  ListMarquage.cpp  ListMarquage.h  ListSync.cpp  ListSync.h  Marking.cpp  Marking.h  MarquageGlobal.cpp  MarquageGlobal.h  MetaGraph.cpp  MetaGraph.h  MetaState.cpp  (+30 more)
src/DistributedStateSpace/: .cproject  .project
src/DistributedStateSpace/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
src/DistributedStateSpace/Debug/: fichier.dot  makefile  result.txt  sources.mk
src/DistributedStateSpace/Debug/DSS/: subdir.mk
src/DistributedStateSpace/Debug/src/: subdir.mk
src/DistributedStateSpace/src/: Makefile  MarquageExtended.cpp  MarquageExtended.h  ReadMe.txt  StdAfx.cpp  fichier.dot  graph.ps  simple_2.txt
src/DistributedStateSpace/src/.codelite/: Verification.session  Verification.workspace.chiheb  compilation.db  compile_commands.json  refactoring.db
(+14 files in other folders)
